--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -1,121 +1,101 @@
 {{page-title (t "cases")}}
-<Cases::CasesHeader @didCreateNewCase={{this.navigateToDecisionmakingFlow}} />
-<div class="auk-scroll-wrapper__body">
-  <div class="auk-u-m-8">
-    <Auk::Toolbar>
-      <Auk::Toolbar::Group @position="right">
-        {{#if (user-may "manage-cases")}}
-          <Auk::Toolbar::Item class="auk-o-flex auk-o-flex--vertical-center">
-            <Auk::Label
-              class="auk-u-text-nowrap auk-u-mr-2 auk-u-p-0"
-              for="show-cases-archived-only"
-            >
-              {{t "show-archived-only"}}
-            </Auk::Label>
-            <AuToggleSwitch
-              data-test-route-cases-overview-show-archived
-              @checked={{this.showArchivedOnly}}
-              id="show-cases-archived-only"
-            />
-          </Auk::Toolbar::Item>
-        {{/if}}
-      </Auk::Toolbar::Group>
-    </Auk::Toolbar>
-    <KDataTable
-      data-test-route-cases-overview-data-table
-      @hoverable={{true}}
-      @striped={{true}}
-      @clickable={{true}}
-      @loading={{this.isLoadingModel}}
-      @content={{this.model}}
-      @page={{this.page}}
-      @size={{this.size}}
-      @numberOfItems={{this.model.length}}
-      @totalNumberOfItems={{this.model.meta.count}}
-      @onChangeSize={{fn (mut this.size)}}
-      @onChangePage={{fn (mut this.page)}}
-    >
-      <:header>
-        <th class="auk-table__col--9">
-          {{t "case-name"}}
-        </th>
-        <Utils::ThSortable
-          class="auk-table__col--1"
-          @currentSorting={{this.sort}}
-          @field="opened"
-          @label={{t "created-on"}}
-          @onChange={{fn (mut this.sort)}}
-        />
-        <th class="auk-table__col--1"></th>
-      </:header>
-      {{! Users explicitly want the whole row to be clickable instead of only the arrow at the end }}
-      {{! template-lint-disable no-invalid-interactive }}
-      <:body as |row|>
-        <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
-          <p data-test-route-cases-overview-row-case-title>
-            {{#if row.case.shortTitle}}
-              {{row.case.shortTitle}}
-            {{else}}
-              {{row.case.title}}
-            {{/if}}
-          </p>
-        </td>
-        <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
-          {{datetime row.opened}}
-        </td>
-        <td class="auk-u-text-align--right">
-          {{#if (user-may "manage-cases")}}
-            <AuDropdown
-              data-test-route-cases-overview-row-actions-dropdown
-              @icon="three-dots"
-              @title={{t "more"}}
-              @hideText={{true}}
-              @alignment="right"
-            >
-              <AuButton
-                data-test-route-cases-overview-row-actions-edit
-                @skin="link"
-                {{on "click" (fn this.openEditCaseModal row.case)}}
-                role="menuitem"
-              >
-                {{t "edit-case"}}
-              </AuButton>
-              <AuButton
-                data-test-route-cases-overview-row-actions-archive
-                @skin="link"
-                @alert={{true}}
-                {{on
-                  "click"
-                  (fn
-                    (if
-                      row.case.isArchived
-                      this.unarchiveCase
-                      this.requestArchiveCase
-                    )
-                    row.case
-                  )
-                }}
-                role="menuitem"
-              >
-                {{t (if row.case.isArchived "unarchive-case" "archive-case")}}
-              </AuButton>
-            </AuDropdown>
+<Cases::CasesHeader @showArchivedOnly={{this.showArchivedOnly}} @didCreateNewCase={{this.navigateToDecisionmakingFlow}} />
+<div class="auk-u-ml-4 auk-scroll-wrapper">
+  <KDataTable
+    data-test-route-cases-overview-data-table
+    @hoverable={{true}}
+    @scrollable={{true}}
+    @striped={{true}}
+    @clickable={{true}}
+    @loading={{this.isLoadingModel}}
+    @content={{this.model}}
+    @page={{this.page}}
+    @size={{this.size}}
+    @numberOfItems={{this.model.length}}
+    @totalNumberOfItems={{this.model.meta.count}}
+    @onChangeSize={{fn (mut this.size)}}
+    @onChangePage={{fn (mut this.page)}}
+  >
+    <:header>
+      <th class="auk-table__col--9">
+        {{t "case-name"}}
+      </th>
+      <Utils::ThSortable
+        class="auk-table__col--1"
+        @currentSorting={{this.sort}}
+        @field="opened"
+        @label={{t "created-on"}}
+        @onChange={{fn (mut this.sort)}}
+      />
+      <th class="auk-table__col--1"></th>
+    </:header>
+    {{! Users explicitly want the whole row to be clickable instead of only the arrow at the end }}
+    {{! template-lint-disable no-invalid-interactive }}
+    <:body as |row|>
+      <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
+        <p data-test-route-cases-overview-row-case-title>
+          {{#if row.case.shortTitle}}
+            {{row.case.shortTitle}}
+          {{else}}
+            {{row.case.title}}
           {{/if}}
-          <AuLink
-            @skin="button-naked"
-            @icon="chevron-right"
+        </p>
+      </td>
+      <td {{on "click" (fn this.navigateToDecisionmakingFlow row)}}>
+        {{datetime row.opened}}
+      </td>
+      <td class="auk-u-text-align--right">
+        {{#if (user-may "manage-cases")}}
+          <AuDropdown
+            data-test-route-cases-overview-row-actions-dropdown
+            @icon="three-dots"
+            @title={{t "more"}}
             @hideText={{true}}
-            @route="cases.case.subcases"
-            @model={{row.id}}
+            @alignment="right"
           >
-            {{t "open"}}
-          </AuLink>
-        </td>
-      </:body>
-      {{! template-lint-enable no-invalid-interactive }}
-    </KDataTable>
-  </div>
-</div>
+            <AuButton
+              data-test-route-cases-overview-row-actions-edit
+              @skin="link"
+              {{on "click" (fn this.openEditCaseModal row.case)}}
+              role="menuitem"
+            >
+              {{t "edit-case"}}
+            </AuButton>
+            <AuButton
+              data-test-route-cases-overview-row-actions-archive
+              @skin="link"
+              @alert={{true}}
+              {{on
+                "click"
+                (fn
+                  (if
+                    row.case.isArchived
+                    this.unarchiveCase
+                    this.requestArchiveCase
+                  )
+                  row.case
+                )
+              }}
+              role="menuitem"
+            >
+              {{t (if row.case.isArchived "unarchive-case" "archive-case")}}
+            </AuButton>
+          </AuDropdown>
+        {{/if}}
+        <AuLink
+          @skin="button-naked"
+          @icon="chevron-right"
+          @hideText={{true}}
+          @route="cases.case.subcases"
+          @model={{row.id}}
+        >
+          {{t "open"}}
+        </AuLink>
+      </td>
+    </:body>
+    {{! template-lint-enable no-invalid-interactive }}
+  </KDataTable>
+</div> 
 {{#if this.showEditCaseModal}}
   <Cases::EditCase
     @onClose={{this.closeEditCaseModal}}
