--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -1,5 +1,5 @@
 {{page-title (t "cases")}}
-<Cases::CasesHeader @showArchivedOnly={{this.showArchivedOnly}} @didCreateNewCase={{this.navigateToDecisionmakingFlow}} />
+<Cases::CasesHeader @showArchivedOnly={{this.showArchivedOnly}} @didCreateNewCase={{this.navigateAfterCreate}} />
 <div class="auk-u-ml-4 auk-scroll-wrapper">
   <KDataTable
     data-test-route-cases-overview-data-table
