remove secretary selector on legacy agendas add meeting secretary to decision-activity if there is one

--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -115,7 +115,7 @@
           </div>
         </AuFormRow>
       {{/if}}
-      {{#if this.enableDigitalAgenda}}
+      {{#if (and this.enableDigitalAgenda (not @meeting.isPreKaleidos))}}
         <AuFormRow>
           <Auk::Label>
             {{t "secretary-for-meeting"}}
