--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -70,7 +70,7 @@
     @onSave={{this.saveGovernmentAreas}}
   />
 {{/if}}
-{{#if this.enableDigitalAgenda}}
+{{#if (and this.enableDigitalAgenda (not this.meeting.isPreKaleidos))}}
 <Mandatees::SecretaryPanel
   @referenceDate={{this.meeting.plannedStart}}
   @allowEditing={{user-may "manage-agendaitems"}}
