KAS-111 review comments

--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -21,12 +21,13 @@
         </AuButton>
       {{/if}}
     </div>
-  {{else}}
+  {{else if (or this.agendaitem @piece.isReportOrMinutes)}}
+    {{! TODO KAS-111 this is not feature flag friendly yet}}
     {{#if this.loadCanManageSignFlow.isRunning}}
       <Auk::Loader />
     {{else if this.canManageSignFlow}}
-      {{#if this.decisionActivity}}
-        {{#if (not this.agendaitemIsRetracted)}}
+      {{#if (or this.decisionActivity @piece.isReportOrMinutes)}}
+        {{#if (or @piece.isReportOrMinutes (not this.agendaitemIsRetracted))}}
           <AuToggleSwitch
             @skin="primary"
             @label={{t "present-for-signing"}}
@@ -58,6 +59,10 @@
         <p>{{t "cannot-create-sign-flow-message"}}</p>
       </AuAlert>
     {{/if}}
+  {{else}}
+    <AuAlert @skin="warning" @icon="alert-triangle" @title={{t "cannot-sign"}}>
+      <p>{{t "cannot-sign-message"}}</p>
+    </AuAlert>
   {{/if}}
 </div>
 
