--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -1,5 +1,5 @@
 {{#if @isReportOrMinute}}
-  <Signatures::CreateSignFlow::ReportOrMinute
+  <Signatures::CreateSignFlow::ReportOrMinutes
     @decisionActivities={{@decisionActivities}}
     @onChangeSigners={{@onChangeSigners}}
   />
