--- a/app/components/signatures/select-secretary-modal.hbs
+++ b/app/components/signatures/select-secretary-modal.hbs
@@ -5,24 +5,28 @@
     @closeDisabled={{@loading}}
   />
   <Auk::Modal::Body>
-    <AuFieldset as |Fieldset|>
-      <Fieldset.content>
-        <AuRadioGroup
-          @alignment="default"
-          @selected={{this.selectedSecretary}}
-          @onChange={{this.onChangeSecretary}}
-          as |Group|
-        >
-          {{#each this.secretaryOptions as |option|}}
-          <Group.Radio
-            @value={{option}}
-            >
-            {{option.fullDisplayName}}
-          </Group.Radio>
-          {{/each}}
-        </AuRadioGroup>
-      </Fieldset.content>
-    </AuFieldset>
+    {{#if this.loadSecretaries.isRunning}}
+      <Auk::Loader />
+    {{else}}
+      <AuFieldset as |Fieldset|>
+        <Fieldset.content>
+          <AuRadioGroup
+            @alignment="default"
+            @selected={{this.selectedSecretary}}
+            @onChange={{this.onChangeSecretary}}
+            as |Group|
+          >
+            {{#each this.secretaryOptions as |option|}}
+            <Group.Radio
+              @value={{option}}
+              >
+              {{option.fullDisplayName}}
+            </Group.Radio>
+            {{/each}}
+          </AuRadioGroup>
+        </Fieldset.content>
+      </AuFieldset>
+    {{/if}}
   </Auk::Modal::Body>
   <Auk::Modal::Footer @custom={{true}}>
     <Auk::Toolbar @size="large" as |Toolbar|>
@@ -40,7 +44,6 @@
       <Toolbar.Group @position="right" as |Group|>
         <Group.Item>
           <AuButton
-            data-test-signatures-select-ministers-apply
             @loading={{@loading}}
             {{on "click" this.saveSelected}}
           >
