KAS-111 more review comments resolved

--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -118,7 +118,7 @@
               />
             {{/if}}
           </Auk::Panel::Body>
-          {{#if (and this.currentPiecePart.value (user-may "manage-minutes"))}}
+          {{#if (and (user-may "manage-minutes") this.currentPiecePart.value)}}
             <Auk::Panel::Body
               class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
             >
