chore: disable setting secretary on edit of preKaleidos meetings
We can't rely on the meeting args because the edit modal lets you edit
the start date, so we need to check that the actual start date we're
trying to save isn't too old. We also need to prevent the saving
of the secretary, only hiding the selector isn't enough.

--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -115,7 +115,7 @@
           </div>
         </AuFormRow>
       {{/if}}
-      {{#if (and this.enableDigitalAgenda (not @meeting.isPreKaleidos))}}
+      {{#if (and this.enableDigitalAgenda (not this.isPreKaleidos))}}
         <AuFormRow>
           <Auk::Label>
             {{t "secretary-for-meeting"}}
