chore: use edited on if the report has multiple revisions

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -67,7 +67,7 @@
                   }}
                 >
                   {{this.label}}
-                  {{datetime-at this.piece.created}}
+                  {{datetime-at this.piece.modified}}
                   {{#if
                     (and
                       this.piece.file.derived
